[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/player/Player.gd" type="Script" id=1]
[ext_resource path="res://scripts/block/BlockGrid.gd" type="Script" id=2]
[ext_resource path="res://scenes/player/cursor_controller.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/block/block_queue.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/fx/pinger.tscn" type="PackedScene" id=5]
[ext_resource path="res://textures/game_playspace_filled.png" type="Texture" id=6]
[ext_resource path="res://scenes/player/multiplier.tscn" type="PackedScene" id=7]
[ext_resource path="res://textures/characters/dog_1.png" type="Texture" id=8]

[node name="player" type="Sprite"]
z_index = -3
z_as_relative = false
centered = false
region_rect = Rect2( 0, 0, 104, 201 )
script = ExtResource( 1 )

[node name="block_grid" type="Node2D" parent="."]
position = Vector2( 4, 4 )
script = ExtResource( 2 )

[node name="cursor_controller" parent="block_grid" instance=ExtResource( 3 )]
z_index = 1

[node name="block_queue" parent="block_grid" instance=ExtResource( 4 )]

[node name="floor" type="Node2D" parent="block_grid"]
position = Vector2( 4, 204 )

[node name="pinger" parent="." instance=ExtResource( 5 )]

[node name="menu_location" type="Node2D" parent="."]
position = Vector2( 64.9416, 90 )

[node name="background" type="Sprite" parent="."]
texture = ExtResource( 6 )
centered = false

[node name="multiplier" parent="." instance=ExtResource( 7 )]
visible = false
position = Vector2( 12.785, -9.68557 )

[node name="avatar" type="Sprite" parent="."]
position = Vector2( 25, -15 )
texture = ExtResource( 8 )
